<resources>
    <string name="app_name">LearnProyect</string>
    <string name="title_activity_reffer">RefferActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_Have_account">¿no tienes cuenta?</string>
    <string name="create_here">Creala aqui</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_unete">Unete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="username_card">Uriel Ramirez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 dias</string>
    <string name="likebnumber_card"> me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_bar">BottomBar</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Perfil</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="userdetails">user_details</string>
    <string name="user_details">Detalles del usuario</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fringilla varius rutrum. Aenean et tincidunt magna. Donec vel orci molestie nisi posuere mollis vel quis diam. Pellentesque quis augue vulputate, pharetra urna a, interdum nunc. Cras eleifend nec sapien vitae semper. Integer aliquet libero eget gravida ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum tincidunt odio non felis porttitor, at pellentesque magna blandit. Maecenas vel ligula id risus semper lacinia non eget odio.  Nunc eros nulla, efficitur egestas ante at, molestie tristique neque. Vestibulum a sodales augue, et tincidunt velit. Nunc scelerisque diam consectetur nunc aliquet, non sagittis nibh condimentum. Sed faucibus scelerisque neque, id egestas lectus finibus vitae. Fusce tempor pretium egestas. Pellentesque a ex justo. Suspendisse at eleifend tellus. Mauris sed ligula vel tortor convallis tincidunt.  Vestibulum aliquet pulvinar neque id varius. Phasellus fermentum sem non tristique porta. Duis vehicula felis metus, nec tristique nisl tempor eget. Phasellus nibh velit, mattis in tellus sit amet, aliquet convallis nibh. Sed consequat consequat metus sit amet sollicitudin. Pellentesque laoreet nec urna sed sagittis. In accumsan neque non posuere mollis. Cras vulputate eleifend rutrum. Vivamus id erat sit amet lectus gravida luctus. Suspendisse blandit condimentum ante, vel facilisis lacus scelerisque eget. Nullam fermentum eu est ut fringilla. Nullam ac accumsan mi. Aliquam aliquet faucibus nisl, vel efficitur quam molestie quis. Fusce vel consequat dui. Integer sit amet iaculis sapien.  Phasellus nec condimentum ante. Suspendisse lacus diam, finibus a turpis vitae, venenatis tempor enim. In hac habitasse platea dictumst. Aliquam ac odio enim. Maecenas et ornare urna. Donec nisi elit, scelerisque pretium risus non, rutrum consectetur magna. Curabitur pellentesque efficitur sem ac lacinia. Integer pharetra lacus sed purus rutrum porta. Suspendisse volutpat nibh ac finibus volutpat. Morbi mattis, est et cursus maximus, metus purus feugiat justo, quis viverra lectus est ut felis.  Maecenas a maximus urna. Fusce sollicitudin lacinia diam, ultricies imperdiet tellus auctor ut. Nullam sed sagittis odio, non euismod sem. Etiam sed ultrices risus. Integer neque turpis, dictum a varius non, tristique sit amet odio. Vestibulum porttitor vitae urna a pulvinar. Suspendisse potenti. Mauris vel mauris vitae mauris posuere pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi volutpat ex a turpis mattis dapibus. Etiam eget risus at dolor lobortis luctus. Nullam finibus, enim at molestie posuere, nunc sem pharetra ligula, id scelerisque lacus diam at purus. Nulla ultrices est vitae nisi efficitur molestie. Curabitur ut tristique ipsum, tincidunt scelerisque nisi. Nunc venenatis elit condimentum est aliquam, sit amet accumsan nisl aliquet. Suspendisse porttitor, lorem sed tincidunt auctor, justo nibh lacinia sem, eu rhoncus lacus quam vitae est.</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
