<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview">




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

            <ImageView
                android:id="@+id/pictureImageCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_cardview"
                android:background="@drawable/math"
                android:scaleType="centerCrop"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:background="@color/colorbackground_card"

            >

            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/username_card"
                android:textColor="@color/editTextColorWhite"
                android:textSize="@dimen/text_size_username_card"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/firstWord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstword_card"
                        android:textColor="@color/editTextColorWhite"
                        android:textSize="@dimen/fisrword_text_card"/>
                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timecard_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/fisrword_text_card"
                    android:layout_marginLeft="@dimen/margin_left_card"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margintop_card"

                >
                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selecter"
                    />
                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likebnumber_card"
                    android:textColor="@color/editTextColorWhite"
                    android:textSize="@dimen/fisrword_text_card"
                    android:layout_marginLeft="@dimen/margin_left_card"
                    />
            </LinearLayout>
        </LinearLayout>



    </FrameLayout>



</android.support.v7.widget.CardView>