<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.demia.learnproyect.LoginActivity"
    android:background="@color/colorPrimary"
    >

   <android.support.v7.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:weightSum="1"
       >
       <android.support.constraint.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.6"
               >


           <ImageView
               android:id="@+id/logo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:background="@drawable/itd_learn2"
               android:foregroundGravity="center"
               />
       </android.support.constraint.ConstraintLayout>

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.4"
           android:fillViewport="true">
       <android.support.v7.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:padding="@dimen/padding_horizontal_login"
           >



           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:theme="@style/EditTextWhite"
               >
               <EditText
                   android:id="@+id/username"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_username"
                   />
           </android.support.design.widget.TextInputLayout>
           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:theme="@style/EditTextWhite">
               <EditText
                   android:id="@+id/password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textPassword"
                   android:hint="  @string/hint_password"
                   android:singleLine="true"
                   android:layout_gravity="start"
                   />
           </android.support.design.widget.TextInputLayout>
           <Button
               android:id="@+id/login"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/text_button_login"
               android:theme="@style/RaisedButtonDark"
               android:onClick="goHomePage"
               />

           <android.support.constraint.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_gravity="center"


               android:foregroundGravity="center_vertical|center_horizontal">

               <TextView
                   android:id="@+id/dontHaveAccount"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:foregroundGravity="center_vertical|center_horizontal"
                   android:gravity="center_vertical|center_horizontal"
                   android:text="@string/dont_Have_account"
                   android:textColor="@color/editTextColorWhite"
                   android:textSize="@dimen/dont_have_account"
                   android:textStyle="bold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintRight_toRightOf="@+id/createHere"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:id="@+id/createHere"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:gravity="center_vertical|center_horizontal"
                   android:onClick="goCreateAccount"
                   android:text="@string/create_here"
                   android:textColor="@color/editTextColorWhite"
                   android:textSize="@dimen/dont_have_account"
                   android:textStyle="bold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintLeft_toRightOf="@+id/dontHaveAccount"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

           </android.support.constraint.ConstraintLayout>
       </android.support.v7.widget.LinearLayoutCompat>
       </ScrollView>
   </android.support.v7.widget.LinearLayoutCompat>
</android.support.design.widget.CoordinatorLayout>